--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         
         html, body { position: absolute; min-height: 100%; width: 100%; }
+        body { margin: 0; height: 100%; }
         
         .main {
             display: flex;
